foi adicionado carrossel de imagens

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h2 class="login__titulo--palavra">Login</h2>
         </div>
 
-        <form  action="#" method="post" class="login__background">
+        <form  action="/inicio.html" method="post" class="login__background">
           <div class="login__background__container">
             <div class="login__nome">
               <label class="login__campo__nome" for="usuario">Usuário</label>
