foram adicionados os scripts de teste de senha e usuario

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="/assets/css/menu/menu-btn.css" />
     <link rel="stylesheet" href="/assets/css/menu/menu-links.css" />
     <link rel="stylesheet" href="/assets/css/login/login-background.css" />
-    <link rel="stylesheet" href="/assets/css/login/login-container.css" />
     <link rel="stylesheet" href="/assets/css/login/login-titulo.css" />
     <link rel="stylesheet" href="/assets/css/login/login-nome.css" />
     <link rel="stylesheet" href="/assets/css/login/login-senha.css" />
@@ -109,5 +108,6 @@
     </div>
     </footer>
     <script src="/assets/js/principal.js"></script>
+    <script src="/assets/js/valida-senha.js"></script>
   </body>
 </html>
