foi desenvolvida algumas coisas do inicio.html, foi feito parte do style

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/assets/css/login/login-nome.css" />
     <link rel="stylesheet" href="/assets/css/login/login-senha.css" />
     <link rel="stylesheet" href="/assets/css/login/login-usuario-senha.css" />
+    <link rel="stylesheet" href="/assets/css/login/login-erro.css">
     <link
       rel="stylesheet"
       href="/assets/css/login/login-background-container.css"
@@ -66,7 +67,7 @@
               <label class="login__campo__senha" for="Senha">Senha</label>
               <input class="login__entrada__senha" type="password" name="senha" />
             </div>
-
+            <span class="mensagem__erro"></span>
             <div class="login__lembre">
               <input
                 class="login__lembre"
