--- a/inicio.html
+++ b/inicio.html
@@ -9,12 +9,39 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css"
     />
+
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/inicio/carrossel.css" />
     <link rel="stylesheet" href="/assets/css/inicio/titulo.css" />
     <link rel="stylesheet" href="/assets/css/inicio/trabalhos.css" />
+    <link rel="stylesheet" href="/assets/css/menu/menu.css" />
+    <link rel="stylesheet" href="/assets/css/menu/menu-container.css" />
+    <link rel="stylesheet" href="/assets/css/menu/menu-logo.css" />
+    <link rel="stylesheet" href="/assets/css/menu/menu-lista.css" />
+    <link rel="stylesheet" href="/assets/css/menu/menu-btn.css" />
+    <link rel="stylesheet" href="/assets/css/menu/menu-links.css" />
+    <link rel="stylesheet" href="/assets/css/rodape/rodape.css" />
     <title>Início</title>
   </head>
   <body>
+    <header class="menu">
+      <div class="menu__container">
+        <div class="menu__logo"></div>
+
+        <nav class="menu__links">
+          <button class="menu__btn">
+            <span class="menu__btn__linhas"></span>
+          </button>
+          <ul class="menu__lista">
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Nossos clientes</a></li>
+            <li><a href="#">Atendimento</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
     <section class="slider">
       <h1>Título</h1>
       <div class="slides">
@@ -67,6 +94,23 @@
         </div>
       </section>
     </article>
+    <footer class="rodaPe">
+      <div class="rodaPe__container">
+      <div class="rodaPe__direitoAutorais">
+        <div class="rodaPe__icones__item">
+
+        </div class="rodaPe__dono__pagina">
+        <p> Dono da pagina</p>
+      </div>
+      <div class="rodaPe__icones">
+        <div class="rodaPe__icones__item"></div>
+        <div class="rodaPe__icones__item"></div>
+        <div class="rodaPe__icones__item"></div>
+        <div class="rodaPe__icones__item"></div>
+      </div>
+    </div>
+    </footer>
     <script src="/assets/js/carrossel.js"></script>
+    <script src="/assets/js/principal.js"></script>
   </body>
 </html>
