--- a/inicio.html
+++ b/inicio.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css"
     />
-
+    <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/inicio/carrossel.css" />
     <link rel="stylesheet" href="/assets/css/inicio/titulo.css" />
@@ -41,7 +41,7 @@
         </nav>
       </div>
     </header>
-
+<main>
     <section class="slider">
       <h1>Título</h1>
       <div class="slides">
@@ -94,6 +94,7 @@
         </div>
       </section>
     </article>
+  </main>
     <footer class="rodaPe">
       <div class="rodaPe__container">
       <div class="rodaPe__direitoAutorais">
