--- a/formario.html
+++ b/formario.html
@@ -41,8 +41,23 @@
       <h1>Cadastro</h1>
       <div class="cadastro__container">
         <form action="">
-          <label for=""></label>
-          <input type="text" />
+          <div class="cadastro__nome cadastro__campos">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" />
+          </div>
+          <div class="cadastro__email cadastro__campos">
+            <label for="email">E-mail</label>
+            <input type="text" id="email">
+          </div>
+          <div class="cadastro__cpf cadastro__campos">
+            <label for="cpf">CPF</label>
+            <input type="text" id="cpf">
+          </div>
+          <div>
+            <button id="botao">Envia</button>
+          </div>
+       
+   
         </form>
       </div>
     </section>
@@ -63,5 +78,6 @@
       </div>
       </footer>
       <script src="/assets/js/principal.js"></script>
+      <script src="/assets/js/verificador-cpf.js"></script>
   </body>
 </html>
