Autenticação de CPF concluída

--- a/formario.html
+++ b/formario.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/assets/css/menu/menu-btn.css" />
     <link rel="stylesheet" href="/assets/css/menu/menu-links.css" />
     <link rel="stylesheet" href="/assets/css/rodape/rodape.css" />
+    <link rel="stylesheet" href="/assets/css/formulario/formulario-cpf-erro.css">
     <title>Início</title>
     <title>Document</title>
   </head>
@@ -50,7 +51,7 @@
             <input type="text" id="email">
           </div>
           <div class="cadastro__cpf cadastro__campos">
-            <label for="cpf">CPF</label>
+            <label for="cpf">CPF <span class="cpf__erro"></span></label>
             <input type="text" id="cpf">
           </div>
           <div>
