foi adicionado o link do cadastro, e estilizado

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/assets/css/login/login-senha.css" />
     <link rel="stylesheet" href="/assets/css/login/login-usuario-senha.css" />
     <link rel="stylesheet" href="/assets/css/login/login-erro.css">
+    <link rel="stylesheet" href="/assets/css/login/login-cadastro.css">
     <link
       rel="stylesheet"
       href="/assets/css/login/login-background-container.css"
@@ -84,6 +85,9 @@
               <a class="login__perdi__senha__link" href="#"
                 >Esqueci minha senha</a
               >
+            </div>
+            <div class="login__btn">
+              <button class="botao__cadastro"><a href="/formario.html">CADASTRO</a></button>
             </div>
           </div>
         </form>
