tela de cadastroc concluída com

--- a/formario.html
+++ b/formario.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/assets/css/menu/menu-links.css" />
     <link rel="stylesheet" href="/assets/css/rodape/rodape.css" />
     <link rel="stylesheet" href="/assets/css/formulario/formulario-cpf-erro.css">
+    <link rel="stylesheet" href="/assets/css/formulario/cadastro-botao.css">
     <title>Início</title>
     <title>Document</title>
   </head>
@@ -54,7 +55,7 @@
             <label for="cpf">CPF <span class="cpf__erro"></span></label>
             <input type="text" id="cpf">
           </div>
-          <div>
+          <div class="cadastro__botao">
             <button id="botao">Envia</button>
           </div>
        
