foram atualizada a tela Inicio, onde foram adicionadas medias querys para tablet e adicionado mais section de trabalhos

--- a/inicio.html
+++ b/inicio.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/assets/css/menu/menu-btn.css" />
     <link rel="stylesheet" href="/assets/css/menu/menu-links.css" />
     <link rel="stylesheet" href="/assets/css/rodape/rodape.css" />
+
     <title>Início</title>
   </head>
   <body>
@@ -86,6 +87,20 @@
 
     <article class="trabalhos">
       <h2 class="trabalhos__titulo">Nosso trabalhos</h2>
+      <section>
+        <div class="trabalhos__primeiraFoto">
+          <div class="item__foto"></div>
+          <h3>foto1</h3>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+        </div>
+      </section>
+      <section>
+        <div class="trabalhos__primeiraFoto">
+          <div class="item__foto"></div>
+          <h3>foto1</h3>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+        </div>
+      </section>
       <section>
         <div class="trabalhos__primeiraFoto">
           <div class="item__foto"></div>
