foram criados alguns stylos da amostra de trabalhos

--- a/inicio.html
+++ b/inicio.html
@@ -87,28 +87,31 @@
 
     <article class="trabalhos">
       <h2 class="trabalhos__titulo">Nosso trabalhos</h2>
-      <section>
-        <div class="trabalhos__primeiraFoto">
-          <div class="item__foto"></div>
-          <h3>foto1</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
-        </div>
-      </section>
-      <section>
-        <div class="trabalhos__primeiraFoto">
-          <div class="item__foto"></div>
-          <h3>foto1</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
-        </div>
-      </section>
-      <section>
-        <div class="trabalhos__primeiraFoto">
-          <div class="item__foto"></div>
-          <h3>foto1</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
-        </div>
-      </section>
+      <div classs="trabalhos__container">
+        <section class="trabalho__principal">
+          <div class="trabalhos__primeiraFoto">
+            <div class="item__foto"></div>
+            <h3>foto1</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+          </div>
+        </section>
+        <section class="trabalho__segundario__um">
+          <div class="trabalhos__primeiraFoto">
+            <div class="item__foto"></div>
+            <h3>foto2</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+          </div>
+        </section>
+        <section class="trabalho__segundario__dois">
+          <div class="trabalhos__primeiraFoto">
+            <div class="item__foto"></div>
+            <h3>foto3</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+          </div>
+        </section>
+      </div>
     </article>
+  
   </main>
     <footer class="rodaPe">
       <div class="rodaPe__container">
