foi feita a implementação das funcionalidades da validação do CPF, assim, foi criada função para tratamento de erros, e adicionado uma funcionalidade para informar que o CPF está válido

--- a/formario.html
+++ b/formario.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/assets/css/rodape/rodape.css" />
     <link rel="stylesheet" href="/assets/css/formulario/formulario-cpf-erro.css">
     <link rel="stylesheet" href="/assets/css/formulario/cadastro-botao.css">
+    <link rel="stylesheet" href="/assets/css/formulario/formulario-cpf-ok.css">
     <title>Início</title>
     <title>Document</title>
   </head>
@@ -52,7 +53,7 @@
             <input type="email" id="email">
           </div>
           <div class="cadastro__cpf cadastro__campos">
-            <label for="cpf">CPF <span class="cpf__erro"></span></label>
+            <label for="cpf">CPF <span class="cpf__erro cpf__ok"></span></label>
             <input type="text" id="cpf" placeholder="000.000.000-00">
           </div>
           <div class="cadastro__botao">
