primeira versão concluída

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               >
             </div>
             <div class="login__btn">
-              <button class="botao__cadastro"><a href="/formario.html">CADASTRO</a></button>
+              <button class="botao__cadastro"><a href="/formulario.html">CADASTRO</a></button>
             </div>
           </div>
         </form>
