--- a/formulario.html
+++ b/formulario.html
@@ -53,7 +53,9 @@
             <input type="email" id="email">
           </div>
           <div class="cadastro__cpf cadastro__campos">
-            <label for="cpf">CPF <span class="cpf__erro cpf__ok"></span></label>
+            <span class="cpf__erro"></span>
+            <span class="cpf__ok"></span>
+            <label for="cpf">CPF </label>
             <input type="text" id="cpf" placeholder="000.000.000-00">
           </div>
           <div class="cadastro__botao">
